--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python_version: '3.10'
+          python-version: '3.10' # 修正: python_version -> python-version
 
       - name: Install dependencies
         run: |
@@ -25,6 +25,13 @@ jobs:
       - name: Run AI Agent Script
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          # 自分のサイトのURL
           TARGET_URL: "https://worldmorse-project.onrender.com"
-        run: python agent.py
+        run: |
+          # agent.py がどこにあっても見つけ出して実行する
+          AGENT_PATH=$(find . -name "agent.py" -print -quit)
+          if [ -z "$AGENT_PATH" ]; then
+            echo "Error: agent.py not found anywhere in the repository!"
+            exit 1
+          fi
+          echo "Found agent.py at: $AGENT_PATH"
+          python "$AGENT_PATH"
