--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,6 @@ jobs:
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TARGET_URL: "https://worldmorse-project.onrender.com"
-      run: |
-          # agent.py ではなく ghost_agent.py を探して実行する
-          AGENT_FILE=$(find . -name "ghost_agent.py" -print -quit)
-          python "$AGENT_FILE"
+   run: |
+          # ghost_agent.py を探して実行する
+          python ghost_agent.py
