--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,3 +25,38 @@ jobs:
         with:
           name: agent-evidence
           path: "*.png"
+
+name: Morse-AI-Agent
+
+on:
+  workflow_dispatch: 
+
+jobs:
+  run-agent:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      # 日本語フォントをインストールする命令を追加
+      - name: Install Japanese Fonts
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y fonts-noto-cjk
+
+      - name: Install dependencies
+        run: |
+          pip install playwright
+          playwright install chromium
+      - name: Run AI Agent
+        run: python ghost_agent.py
+        continue-on-error: true
+      - name: Upload Screenshots
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: agent-evidence
+          path: "*.png"
