--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,18 @@
+name: Morse-AI-Agent
 
-      # 日本語フォントをインストールする命令を追加
+on:
+  workflow_dispatch: 
+
+jobs:
+  run-agent:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
       - name: Install Japanese Fonts
         run: |
           sudo apt-get update
